client/assets/css/styles.css
/* ... */
.portlet.light .portlet-body {
  padding-top: 8px;
}

.portlet.light.portlet-fullscreen > .portlet-body {
  padding: 8px 0;
}

/**------------------------------------------------
 * tabbable-line
 */

.tabbable-line > .nav-tabs {
  border: none;
  margin: 0px;
}

.tabbable-line > .nav-tabs > li {
  margin-right: 2px;
}

.tabbable-line > .nav-tabs > li > a {
  border: 0;
  margin-right: 0;
  color: #737373;
}

.tabbable-line > .nav-tabs > li > a > i {
  color: #a6a6a6;
}

.tabbable-line > .nav-tabs > li.open, .tabbable-line > .nav-tabs > li:hover {
  border-bottom: 4px solid #fbcdcf;
}

.tabbable-line > .nav-tabs > li.open > a, .tabbable-line > .nav-tabs > li:hover > a {
  border: 0;
  background: none !important;
  color: #333;
}

.tabbable-line > .nav-tabs > li.open > a > i, .tabbable-line > .nav-tabs > li:hover > a > i {
  color: #a6a6a6;
}

.tabbable-line > .nav-tabs > li.open .dropdown-menu, .tabbable-line > .nav-tabs > li:hover .dropdown-menu {
  margin-top: 0px;
}

.tabbable-line > .nav-tabs > li.active {
  border-bottom: 4px solid #F3565D;
  position: relative;
}

.tabbable-line > .nav-tabs > li.active > a {
  border: 0;
  color: #333;
}

.tabbable-line > .nav-tabs > li.active > a > i {
  color: #404040;
}

.tabbable-line > .tab-content {
  margin-top: -3px;
  background-color: #fff;
  border: 0;
  border-top: 1px solid #eee;
  padding: 15px 0;
}

.portlet .tabbable-line > .tab-content {
  padding-bottom: 0;
}

.tabbable-line.tabs-below > .nav-tabs > li {
  border-top: 4px solid transparent;
}

.tabbable-line.tabs-below > .nav-tabs > li > a {
  margin-top: 0;
}

.tabbable-line.tabs-below > .nav-tabs > li:hover {
  border-bottom: 0;
  border-top: 4px solid #fbcdcf;
}

.tabbable-line.tabs-below > .nav-tabs > li.active {
  margin-bottom: -2px;
  border-bottom: 0;
  border-top: 4px solid #F3565D;
}

.tabbable-line.tabs-below > .tab-content {
  margin-top: -10px;
  border-top: 0;
  border-bottom: 1px solid #eee;
  padding-bottom: 15px;
}

/*--------------------------------------------------
    [Page Content]
----------------------------------------------------*/
.page-content.page-content-popup {
  background: #fff;
}

/* Set space for content */
@media (max-width: 480px) {
  /* 480px */
  .page-content.page-content-popup {
    padding-bottom: 20px;
  }
}

@media (max-width: 767px) {
  /* 767px */
  .page-content.page-content-popup {
    margin-top: 20px;
  }
}

@media (min-width: 992px) {
  /* display space on top for desktop view */
  .page-content {
    margin: 20px 0;
  }
}

/* Page Content */
.page-content {
  overflow: hidden;
}

.page-content .page-content-fixed-header {
  width: 100%;
  background: #fff;
  border-bottom: 1px solid #efefef;
  /* Page Breadcrumb */
  /* Content Header Menu */
}

.page-content .page-content-fixed-header:before, .page-content .page-content-fixed-header:after {
  display: table;
  content: " ";
}

.page-content .page-content-fixed-header:after {
  clear: both;
}

.page-content .page-content-fixed-header .page-breadcrumb {
  float: left;
  list-style: none;
  margin-bottom: 0;
  padding-left: 20px;
}

.page-content .page-content-fixed-header .page-breadcrumb > li {
  margin: 0;
  color: #6c7984;
  font-size: 22px;
  padding: 12px 0;
  font-weight: 200;
  white-space: pre-line;
  display: inline-block;
}

.page-content .page-content-fixed-header .page-breadcrumb > li + li:before {
  position: relative;
  top: -5px;
  font-size: 6px;
  padding: 0 7px 0 5px;
  color: #a6b2bd;
  content: "\f111";
  font-family: FontAwesome;
}

.page-content .page-content-fixed-header .page-breadcrumb > li > a:hover {
  text-decoration: none;
}

.page-content .page-content-fixed-header .page-breadcrumb > li .page-breadcrumb-link {
  color: #101214;
}

.page-content .page-content-fixed-header .content-header-menu {
  float: right;
  /* Menu Toggler */
  /* Dropdown Ajax Menu */
}

.page-content .page-content-fixed-header .content-header-menu .menu-toggler {
  float: left;
  display: none;
  border: none;
  padding: 20px 15px;
  background: #fff;
  border-left: 1px solid #efefef;
}

.page-content .page-content-fixed-header .content-header-menu .menu-toggler:focus {
  outline: 0;
}

.page-content .page-content-fixed-header .content-header-menu .menu-toggler:hover {
  cursor: pointer;
}

.page-content .page-content-fixed-header .content-header-menu .menu-toggler:hover .icon-bar {
  background: #009dc7;
}

.page-content .page-content-fixed-header .content-header-menu .menu-toggler .icon-bar {
  width: 21px;
  height: 2px;
  display: block;
  background: #a6b2bd;
}

.page-content .page-content-fixed-header .content-header-menu .menu-toggler .icon-bar + .icon-bar {
  margin-top: 5px;
}

.page-content .page-content-fixed-header .content-header-menu .dropdown-ajax-menu {
  margin: 0;
  padding: 0;
  display: inline;
  position: relative;
  vertical-align: inherit;
}

.page-content .page-content-fixed-header .content-header-menu .dropdown-ajax-menu .btn {
  border-radius: 0;
  background: #fff;
  padding: 16px 30px 17px;
  border-left: 1px solid #efefef;
}

.page-content .page-content-fixed-header .content-header-menu .dropdown-ajax-menu .btn:hover i {
  color: #009dc7;
}

.page-content .page-content-fixed-header .content-header-menu .dropdown-ajax-menu .btn i {
  height: 8px;
  font-size: 5px;
  line-height: 2;
  display: block;
  color: #a6b2bd;
}

.page-content .page-content-fixed-header .content-header-menu .dropdown-ajax-menu .dropdown-menu-v2 {
  margin-top: 70px;
}

/* Material Design */
.page-md .content-header-menu .dropdown-ajax-menu .btn {
  box-shadow: none;
  border-left: 1px solid #efefef !important;
}
/* ... */

